button events - click

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
 *{
      box-sizing: border-box;
      padding: 0;
-     margin: 0;
+     margin-bottom: 1rem;
 }
 body{
+     display: flex;
      align-items: center;
      text-align: center;
      padding: 2rem;
+}
+button{
+     padding:0.2rem;
+     margin:0.25rem;
+     border:1px solid gray;
+     border-radius: 2px;
+     cursor: pointer;
+     letter-spacing: 1px;
+}
+button:hover{
+     background-color: aliceblue;
 }
